trying to fix layout shift and css error

--- a/lesson11/css/small.css
+++ b/lesson11/css/small.css
@@ -443,7 +443,7 @@ form label textarea {
   height: auto;
 }
 #cards-container section p {
-  font-size: 1.2em;
+  font-size: 1.1em;
 }
 #article .banner-pic img {
   width: 100%;
